# eventdispatcher

./: CMakeLists.txt  README.md  TODO.md  TODO.txt  mk
cmake/: CMakeLists.txt  CppProcessConfig.cmake  EventDispatcherConfig.cmake  EventDispatcherQtConfig.cmake  ReporterConfig.cmake  SnapLoggerNetworkConfig.cmake  VerifyMessageDefinitionsConfig.cmake
conf/: README.md  ed-signal.conf  rprtr.vim  snaplog.conf  snaploggerd.conf
cppprocess/: CMakeLists.txt  README.md
cppprocess/cppprocess/: CMakeLists.txt  buffer.h  exception.cpp  exception.h  io.cpp  io.h  io_capture_pipe.cpp  io_capture_pipe.h  io_data_pipe.cpp  io_data_pipe.h  io_error_file.cpp  io_error_file.h  io_file.cpp  io_file.h  io_input_file.cpp  io_input_file.h  io_output_file.cpp  io_output_file.h  io_pipe.cpp  io_pipe.h  process.cpp  process.h  process_info.cpp  process_info.h  process_list.cpp  process_list.h  version.cpp  version.h.in
cppprocess/doc/: CMakeLists.txt  cppprocess.doxy.in
debian/: changelog  control  copyright  cppprocess-dev.install  cppprocess-doc.install  cppprocess.docs  cppprocess.install  eventdispatcher-dev.install  eventdispatcher-doc.install  eventdispatcher-qt-dev.install  eventdispatcher-qt.docs  eventdispatcher-qt.install  eventdispatcher.install  reporter.install  snaplogger-network-dev.install  snaplogger-network-doc.install  snaplogger-network.install  snaplogger-utils.docs  snaplogger-utils.install  snaploggerd.docs  snaploggerd.install  snaploggerd.service
dev/: coverage  index.php
doc/: CMakeLists.txt  ed-stop.1  eventdispatcher.doxy.in
eventdispatcher/: CMakeLists.txt  broadcast.h  broadcast_message.h  certificate.cpp  certificate.h  communicator.cpp  communicator.h  connection.cpp  connection.h  connection_t.cpp  connection_t.h  connection_with_send_message.cpp  connection_with_send_message.h  cui_connection.cpp  cui_connection.h  dispatcher.cpp  dispatcher.h  dispatcher_base.cpp  dispatcher_base.h  dispatcher_match.cpp  dispatcher_match.h  dispatcher_support.cpp  dispatcher_support.h  exception.h  fd_buffer_connection.cpp  fd_buffer_connection.h  fd_connection.cpp  fd_connection.h  file_changed.cpp  file_changed.h  inter_thread_message_connection.cpp  inter_thread_message_connection.h  local_dgram_base.cpp  local_dgram_base.h  local_dgram_client.cpp  local_dgram_client.h  local_dgram_server.cpp  local_dgram_server.h  local_dgram_server_connection.cpp  local_dgram_server_connection.h  (+105 more)
eventdispatcher/message-definitions/: ABSOLUTELY.conf  ALIVE.conf  CMakeLists.txt  COMMANDS.conf  HELP.conf  INVALID.conf  LEAK.conf  LOG_ROTATE.conf  QUITTING.conf  READY.conf  RESTART.conf  SERVICE_UNAVAILABLE.conf  STOP.conf  UNKNOWN.conf
eventdispatcher/reporter/: CMakeLists.txt  README.md  basic_instructions.cpp  direct_tcp_server.cpp  direct_tcp_server.h  direct_tcp_server_client.cpp  direct_tcp_server_client.h  executor.cpp  executor.h  expression.cpp  expression.h  instruction.cpp  instruction.h  instruction_factory.cpp  instruction_factory.h  lexer.cpp  lexer.h  messenger_tcp_client.cpp  messenger_tcp_client.h  messenger_tcp_server.cpp  messenger_tcp_server.h  messenger_tcp_server_client.cpp  messenger_tcp_server_client.h  parser.cpp  parser.h  state.cpp  state.h  statement.cpp  statement.h  token.cpp  token.h  variable.cpp  variable.h  variable_address.cpp  variable_address.h  variable_array.cpp  variable_array.h  variable_floating_point.cpp  variable_floating_point.h  variable_integer.cpp  (+11 more)
eventdispatcher_qt/: CMakeLists.txt  qt_connection.cpp  qt_connection.h
examples/: CMakeLists.txt  README.md  client.cpp  server.cpp
snapcommunicator/daemon/: CMakeLists.txt  base_connection.cpp  base_connection.h  cache.cpp  cache.h  exception.h  gossip_connection.cpp  gossip_connection.h  interrupt.cpp  interrupt.h  listener.cpp  listener.h  load_timer.cpp  load_timer.h  main.cpp  ping.cpp  ping.h  remote_connections.cpp  remote_connections.h  remote_snapcommunicator.cpp  remote_snapcommunicator.h  server.cpp  server.h  service_connection.cpp  service_connection.h  unix_connection.cpp  unix_connection.h  unix_listener.cpp  unix_listener.h  utils.cpp  utils.h  version.h.in
snapcommunicator/tools/: CMakeLists.txt  snapclusterstatus.cpp  snapmessage.cpp  snapsignal.cpp  snapstop.cpp
snaplogger/daemon/: CMakeLists.txt  controller_connection.cpp  controller_connection.h  main.cpp  network_component.cpp  network_component.h  snaploggerd.cpp  snaploggerd.h  tcp_connection.h  tcp_logger_connection.cpp  tcp_logger_connection.h  tcp_logger_server.cpp  tcp_logger_server.h  udp_logger_server.cpp  udp_logger_server.h  utils.cpp  utils.h  version.cpp  version.h.in
snaplogger/network/: CMakeLists.txt  alert_appender.cpp  alert_appender.h  base_network_appender.cpp  base_network_appender.h  network_appenders.h  snaplogger_network.cpp  snaplogger_network.h  tcp_appender.cpp  tcp_appender.h  udp_appender.cpp  udp_appender.h  version.cpp  version.h.in
snaplogger/network/message-definitions/: CMakeLists.txt  LOG.conf
snaploggerd/daemon/: CMakeLists.txt  main.cpp  snaploggerd.cpp
tests/: CMakeLists.txt  catch_certificate.cpp  catch_dispatcher.cpp  catch_file_changed.cpp  catch_main.cpp  catch_main.h  catch_message.cpp  catch_process.cpp  catch_process_info.cpp  catch_reporter_executor.cpp  catch_reporter_expression.cpp  catch_reporter_instruction.cpp  catch_reporter_lexer.cpp  catch_reporter_parser.cpp  catch_reporter_statement.cpp  catch_reporter_token.cpp  catch_signal_handler.cpp  catch_timer.cpp  catch_unix.cpp  catch_unix_dgram.cpp  catch_unix_stream.cpp  catch_version.cpp  check_dispatcher_without_command.cpp  check_signal_and_eint.cpp  example.cpp  main.cpp  main.h  message.cpp  process_listener.cpp  sanitizer-options.sh  suppress-leaks.txt  timer_test.cpp  version.cpp
tests/certificate/: snakeoil.csr  snakeoil.key  snakeoil.pem
tests/message-definitions/: DOWN.conf  HELLO.conf  HI.conf
tests/rprtr/: send_and_receive_complete_messages.rprtr  test_load_with_create_lexer.rprtr
tools/: CMakeLists.txt  check_certificate.cpp  ed_signal.cpp  ed_stop.cpp  verify_message_definitions.cpp
(+42 files in other folders)
